--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-<!--此处需求
-一个链接导向newf.php，是人脸注册
-一个链接导向uploadf.php,是人脸搜索
-
-
--->
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link href="css/style.css" rel="stylesheet" />
+        <title>Facedetect</title>
+    </head>
+    <body>
+        <div>
+            当前登录用户：<a id="UN"></a>
+            <a href="logout.php" class="link">登出</a>
+            <a href="reset.html" class="link">更改密码</a>
+        </div>
+        <div>
+            <a href="newf.php" class="link">人脸注册</a><br>
+            <a href="uploadf.php" class="link">人脸搜索</a><br> 
+        </div>
+    </body>
+    <script>var type="mainp";</script>
+    <script src="js/check.js"></script>
+</html>
