--- a/reset.html
+++ b/reset.html
@@ -4,11 +4,10 @@
         <script src="https://ssl.captcha.qq.com/TCaptcha.js" async></script>
     </head>
     <body>
-        <h1>注册</h1>
-        <form action="regprocess.php" method="post" onsubmit="return check()" style="margin:auto;" class="reg info-input" id="input-form">
-        用户名<input type="text" name="username" id="username" class="input-box"><br>
-        密码<input type="password" name="password" id="password" class="input-box"><br>
-        重复密码<input type="password" name="assertpassword" id="assertpassword" class="input-box"><br>
+        <form action="resetprocess.php" method="post" onsubmit="return check()" style="margin:auto;" class="reg info-input" id="input-form">
+        旧密码<input type="password" name="oldpassword" id="oldpassword" class="input-box"><br>
+        新密码<input type="password" name="password" id="password" class="input-box"><br>
+        重复新密码<input type="password" name="assertpassword" id="assertpassword" class="input-box"><br>
         验证码<button id="TencentCaptcha" type="button" class="button button-action" data-appid="2010598725" data-cbfn="subm">验证</button><br>
         <input type="text" style="display:none;" id="capti" name="ticket">
         <input type="text" style="display:none;" id="captr" name="randstr">
@@ -52,13 +51,14 @@
     };
     function check() { 
         var username=document.getElementById("username").value; 
+        var oldpassword=document.getElementById("oldpassword").value; 
         var password=document.getElementById("password").value; 
         var assertpassword=document.getElementById("assertpassword").value;
         var regex=/^[/s]+$/; 
         var szReg=/^[A-Za-z0-9d]+([-_.][A-Za-z0-9d]+)*@([A-Za-z0-9d]+[-.])+[A-Za-zd]{2,5}$/;
-        if(regex.test(username)||username.length==0){ 
-            alert("用户名不合法"); 
-            return false; 
+        if(regex.test(oldpassword)||password.length==0){ 
+            alert("旧密码不合法"); 
+            return false;     
         } 
         if(regex.test(password)||password.length==0){ 
             alert("密码不合法"); 
@@ -70,6 +70,4 @@
         } 
     } 
     </script>
-    <script>var type="prelogin";</script>
-    <script src="js/check.js"></script>
 </html>
